# snarkpack

./: Cargo.toml
src/: commitment.rs  lib.rs  pairing_check.rs  proof.rs  prover.rs  snarkjs_proof.rs  snarkjs_zkey.rs  srs.rs  transcript.rs  verifier.rs
tests/: aggregation.rs
tests/secret/000/: proof.json  public.json
tests/secret/001/: proof.json  public.json  verification_key.json
