[package]
name = "snarkpack"
version = "0.1.0"
authors = ["nalos"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.5"
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-poly = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-crypto-primitives = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0", default-features = false }
rand = { version = "0.8" }
rand_core = { version = "^0.6" }
digest = { version = "0.9" }
sha2 = { version = "^0.9" }
rayon = { version = "1", optional = true }
thiserror = { version = "^1.0" }
bellman_ce = { git = "https://github.com/matter-labs/bellman", branch = "beta", default-features = false, features = ["plonk"] } # active features depend on build type
ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-snark = { version = "0.3.0", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
byteorder = "1.4.3"
num = { version = "0.4.0" }
num-traits = { version = "0.2.0", default-features = false }
num-bigint = { version = "0.4", default-features = false, features = ["rand"] }

[dev-dependencies]
rand_chacha = "0.3"

[features]
default = ["parallel"]
std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-groth16/std", "ark-relations/std", "ark-crypto-primitives/std", "ark-std/std" ]
parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-groth16/parallel", "ark-ec/parallel", "ark-crypto-primitives/parallel", "ark-std/parallel", "rayon"]
